--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,5 +1,23 @@
+h1 {
+    text-align: center;
+    font-size: 50px;
+}
+
 #clock {
     font-family:  'DotGothic16', sans-serif;
     font-size: 50px;
     color: red;
+    display: block;
+    align-items: center;
+    margin-left: 20%;
+    margin-right: 20%;
+    border: black 1px solid;
+    background-color: black;
+}
+
+
+#time-div, #date-div{
+    display: flex;
+    justify-content: space-between;
+    padding: 15px;
 }
